Sidebar tabs active area deadzone #63822

Closed
opened 2019-04-23 15:22:49 +02:00 by Mikhail Rachinskiy · 14 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 860M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.35

Blender Version
Broken: version: 2.80 (sub 58), branch: master, commit date: 2019-04-23 09:24, hash: c9ed39925a
Worked: April 18 testbuild

Short description of error
Around 2/3 of Sidebar tab width is a deadzone that does not respond to left clicks or mouse wheel.

Here is the video demonstration, I place mouse cursor on the most right side of the tab and left clicking on it, then I move mouse cursor to the left a little bit and click again, etc.:
2019-04-23_17-13-29.mp4

Exact steps for others to reproduce the error

  • Activate Bool Tool add-on to have tabs in Sidebar.
  • Try to switch tabs by using left click or mouse wheel.
**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 860M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.35 **Blender Version** Broken: version: 2.80 (sub 58), branch: master, commit date: 2019-04-23 09:24, hash: `c9ed39925a` Worked: April 18 testbuild **Short description of error** Around 2/3 of Sidebar tab width is a deadzone that does not respond to left clicks or mouse wheel. Here is the video demonstration, I place mouse cursor on the most right side of the tab and left clicking on it, then I move mouse cursor to the left a little bit and click again, etc.: [2019-04-23_17-13-29.mp4](https://archive.blender.org/developer/F6969492/2019-04-23_17-13-29.mp4) **Exact steps for others to reproduce the error** - Activate Bool Tool add-on to have tabs in Sidebar. - Try to switch tabs by using left click or mouse wheel.
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy

#63837 was marked as duplicate of this issue

#63837 was marked as duplicate of this issue
Mikhail Rachinskiy changed title from Sidebar tabs have left click deadzone to Sidebar tabs active area deadzone 2019-04-23 15:30:11 +02:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Campbell Barton was assigned by Jacques Lucke 2019-04-23 17:33:35 +02:00
Member

Could not find the cause for this...

Could not find the cause for this...
Author
Member

I noticed that tabs located below sidebar have 100% active area deadzone.
So maybe this commit might be the cause? be3adb51de

I noticed that tabs located below sidebar have 100% active area deadzone. So maybe this commit might be the cause? be3adb51de
Member

You are right, this commit caused the bug.

You are right, this commit caused the bug.

Added subscriber: @MufeedAl-Hashim

Added subscriber: @MufeedAl-Hashim

Added subscriber: @Dheim

Added subscriber: @Dheim

This issue was referenced by 411b5f3b10

This issue was referenced by 411b5f3b100ee385b68c888c278745926357626a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Hi @ideasman42 this bug is only partially fixed, click events are still not registering if tabs located below Sidebar.

Checked with 411b5f3b10

When you see mouse moving up and down on a single tab, that means I'm wildly clicking on it:
2019-04-24_05-27-29.mp4

Hi @ideasman42 this bug is only partially fixed, click events are still not registering if tabs located below Sidebar. Checked with 411b5f3b10 When you see mouse moving up and down on a single tab, that means I'm wildly clicking on it: [2019-04-24_05-27-29.mp4](https://archive.blender.org/developer/F6971003/2019-04-24_05-27-29.mp4)

This issue was referenced by 4312b47e83

This issue was referenced by 4312b47e83aaa7d54e67e53774ca85140c3a0931

Resolved 4312b47e83

Resolved 4312b47e83

Removed subscriber: @MufeedAl-Hashim

Removed subscriber: @MufeedAl-Hashim
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63822
No description provided.