Fix T63822: Sidebar tabs active area dead-zone

Clip on one axis for aligned regions to avoid tabs being clipped out.

Introduced in recent fix for T61554